# JournalInsightAI

./: .env.example  .replit  GOOGLE_OAUTH_FINAL_SOLUTION.md  GOOGLE_OAUTH_SETUP.md  JOURNAL_INGEST_PIPELINE_COMPLETE.md  NOTION_INTEGRATION.md  PRESET_FUNCTIONALITY_COMPLETE.md  PROMPT_API_OVERRIDE_COMPLETE.md  PROMPT_EXTERNALIZATION_COMPLETE.md  README.md  cleanup_orphaned_hashes.cjs  custom_prompt_example.json  db.py  debug_openai_response.py  demo_ingest_pipeline.py  embedding.py  faiss.index  faiss_index.py  faiss_metadata.pkl  ingest_journal_images.py  main.py  migrate_images_to_database.cjs  package-lock.json  package.json  prompt_config.json  pyproject.toml  simple_faiss.py  test_api.py  test_api_prompt_override.py  test_comprehensive_security.sh  test_deployment_cache_fix.sh  test_duplicate_after_delete.sh  test_image_persistence.sh  test_ingest_simple.py  test_preset_functionality.py  test_prompt_updates.py  test_security_manual.sh  test_user_isolation.py  verify_setup.py
attached_assets/: Pasted--Ticket-3-Journal-image-ingest-pipeline-Goal-Turn-1-N-uploaded-images-of-handwritten-pages-int-1749691305335_1749691305335.txt
migrations/: 0000_cloudy_moira_mactaggert.sql  0000_wonderful_dragon_man.sql
prompt_library/: coach.json  productivity.json  stoic.json  therapist.json
server/: auth.ts  date-parser.ts  db.ts  firebaseAuth.ts  google-docs-sync.ts  google-docs.ts  google-oauth.ts  image-hash.ts  image-storage.ts  index.ts  notion-sync.ts  notion.ts  openai.ts  replitAuth.ts  retry-processing.ts  routes-old.ts  routes.ts  setup-notion.ts  storage.ts  types.ts
(+40 files in other folders)
